# rsocktui

./: Cargo.toml  LICENSE  README.md  app.py
src/: app.rs  main.rs
