[package]
name = "rsocktui"
version = "0.1.0"
description = "Simple TUI to test a websocket connection."
readme = "README.md"
repository = "https://github.com/AloizioMacedo/rsocktui"
keywords = ["tui", "websocket", "async"]
categories = [
    "command-line-utilities",
    "command-line-interface",
    "web-programming::websocket",
]
authors = ["Aloizio Macedo <aloiziomacedo@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29.0"
color-eyre = "0.6.5"
tokio-websockets = { version = "0.11.3", features = [
    "client",
    "fastrand",
    "native-tls",
    "sha1_smol",
] }
tokio = { version = "1.43.0", features = ["full"] }
futures-util = { version = "0.3.31", features = ["sink"] }
http = "1.3.1"
clap = { version = "4.5.27", features = ["derive"] }
